# OpenGL_Learning

./: README.md
Hello_Triangle/: CMakeLists.txt  glad.c  main.cpp
include/glad/: glad.h
